<resources>
    <string name="app_name">Himnario Virtual</string>
    <string name="creando">Nuevo registro</string>
    <string name="usuarios">Gestión de usuarios</string>
    <string name="editando">Editando registro</string>
    <string name="correoHint">Escribe tu correo</string>
    <string name="passHint">Escribe tu constraseña</string>
    <string name="correo">Ingresa tu correo:</string>
    <string name="registrar">Registrarse</string>
    <string name="acceder">Acceder</string>
    <string name="buscar">Buscar</string>
    <string name="titulo_registro">%d. %s</string>
    <string name="cargando">Cargando...</string>


    <string name="password">Ingresa tu contraseña:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="subtitulo">Tonalidad:\n Compás:\n Ritmo Sugerido:</string>
    <string name="audio">Audio</string>
    <string name="descripcion">Descripcion</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion1">Descripcion</string>
    <string name="descripcion2">Descripcion (Sin Cifrado)</string>
    <string name="himno">Himno #</string>
    <string name="contenido">aa\naa\naa\naa\naa\naa\naa\n aa\naa\naa\naa\naa\naa\naa\naa\naa\naa\naa</string>
    <string name="numero_de_himno">Número de Himno</string>
    <string name="url_de_imagen">URL de imagen</string>
    <string name="url_de_audio">URL de audio</string>

    <!--  Menu de Home  -->
    <string name="tituloUsuario">Usuario</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="permisos">Permisos</string>

    <string name="tituloMenuRegistro">Registros</string>
    <string name="agregarRegistro">Crear nuevo</string>

    <!--  Registro de usuario  -->
    <string name="txtCorreoRegistro">Correo Electrónico*</string>
    <string name="txtPasswordRegistro">Constraseña*</string>
    <string name="txtNombreRegistro">Nombres*</string>
    <string name="txtApellidoRegistro">Apellidos*</string>

    <!--    Radio Button Group-->
    <string name="sinAcceso">Sin Acceso</string>
    <string name="lector">Lector</string>
    <string name="editor">Editor</string>
    <string name="admin">Admin</string>
</resources>