<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_item"
        android:title="@string/tituloUsuario">
        <menu>
            <item
                android:id="@+id/search_item"
                android:checkable="true"
                android:icon="@drawable/ic_permisos"
                android:title="@string/permisos"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/rotation_item"
                android:checkable="true"
                android:icon="@drawable/ic_estadisticas"
                android:title="@string/estadisticas"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
    <item
        android:id="@+id/labels_item"
        android:title="@string/tituloMenuRegistro">
        <menu>
            <item
                android:id="@+id/label_one"
                android:checkable="true"
                android:icon="@drawable/ic_add"
                android:title="@string/agregarRegistro"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>