<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="usuario"
            type="com.example.natacion.database.Usuario" />

        <variable
            name="adminViewModel"
            type="com.example.natacion.vistas.admin.AdminViewModel" />
    </data>


    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <TextView
                android:id="@+id/txtCorreo"
                style="@style/txtTituloRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="correo@gmail.com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNombre"
                style="@style/txtSubTituloRecycler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Juan Fernando Lopez Bol"
                app:layout_constraintStart_toStartOf="@id/txtCorreo"
                app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/chkGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtNombre">

                <RadioButton
                    android:id="@+id/rbSinAccesso"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:checked="true"
                    android:text="@string/sinAcceso" />

                <RadioButton
                    android:id="@+id/rbLector"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/lector" />

                <RadioButton
                    android:id="@+id/rbEditor"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/editor" />

                <RadioButton
                    android:id="@+id/rbAdministrador"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/admin" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</layout>